package id.ac.polinema;

public interface Shippable {
    String ship();
}
